deps/v8/test/message/fail/directive.out
*%(basename)s:6: SyntaxError: Illegal 'use strict' directive in function with non-simple parameter list
  "use strict";
  ^^^^^^^^^^^^
SyntaxError: Illegal 'use strict' directive in function with non-simple parameter list
